# BacCurate

./: .gitignore  .prettierignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependency-audit.yml
config/: bioproject_snapshot.yaml  curation_schema.yaml  date.yaml  host.yaml  isolation_source.yaml  location.yaml  metadata_matching.yaml  pathogens.yaml  source_snapshot.yaml
data/raw/: README.md
data/reference/: README.md  geo_loc_list.txt  ontology_terms.tsv
data/reference/taxonomy/: taxids_curated.tsv
docs/: README.md  collection_date.md  data_acquisition.md  host.md  isolation_source.md  location.md
scripts/: build_biosample_index.py  parse_biosample_xml.py
src/baccurate/: __init__.py  atb.py  dataset_builder.py  main.py  pathogens.py  paths.py  prompt_snapshot.py  run_outputs.py  source_snapshot.py
src/baccurate/extraction/: __init__.py  _review_reports.py  bioproject.py  classifiers.py  cli.py  curation.py  io.py  metadata_types.py  policy.py  tables.py  xml.py
src/baccurate/llm/: client.py  diagnostics.py  request.py
src/baccurate/postprocess/: merge_results.py
src/baccurate/standardizers/: __init__.py  _date_interpreter.py  _date_record.py  base.py  date.py  host.py  host_isolation.py  iso_renderer.py  isolation.py  location.py
src/baccurate/taxonomy/: lineage.py
src/baccurate/utils/: __init__.py  args.py  cache.py  compressed_io.py  config.py  io.py  llm.py  logging.py  progress.py  text.py  xml.py
tests/: test_cli.py  test_llm_request.py  test_run_outputs.py  test_source_snapshot.py  test_stand_date.py  test_stand_host.py  test_stand_iso.py  test_stand_loc.py
