[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baccurate"
version = "0.5.2"
description = "Python metadata harmonizer for BioSample ESKAPEE data"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Norbert Kada", email = "kada.norbert@gmail.com" },
]

dependencies = [
    "instructor~=1.15.4",
    "openai~=2.28.0",
    "pydantic~=2.11",
    "pandas~=2.2.3",
    "lxml~=6.0",
    "plotly~=6.5.0",
    "numpy~=2.1.3",
    "python-dotenv~=1.2.2",
    "country_converter~=1.3.1",
    "python-dateutil~=2.9.0.post0",
    "PyYAML~=6.0.2",
    "reverse-geocode~=1.6.6",
    "tqdm~=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/ELTEbioinformatics/BacCurate.git"
Issues = "https://github.com/ELTEbioinformatics/BacCurate/issues"

[project.scripts]
baccurate = "baccurate.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["baccurate*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
minversion = "8.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, undefined names)
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modernize syntax)
    "B",      # bugbear (common bug patterns)
    "SIM",    # simplify (code simplification suggestions)
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501", "E702", "B905", "B023"]
